fixed overlapping bootstrap&navbar ul issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,8 @@
 
 body {
-    background: url ('./assets/images/bgimage.jpg') repeat;
-    
+    background: url ('./assets/images/bgimage.jpg');
+    background-color:blueviolet;
+    padding:80px;
 }
 
 h2{
@@ -12,28 +13,61 @@ ul{
     
 }
 
+
+
+
+main{
+    border-style: inset;
+    border-color: indigo;
+    box-sizing: border-box;
+    padding-top:60px;
+    padding-left:60px;
+    padding-bottom:60px;
+    background-color:white;
+    width: 60%;
+    
+}
+
+article{
+    width:90%;
+
+}
+
+h1{
+    text-decoration:line;
+    color:darkred;
+    size: 22px;
+}
+
+footer{
+    position:fixed;
+    bottom:0;
+    right:50%;
+    text-align:center;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+}
+
+nav{
+    border-style:solid;
+    border-width:5px;
+    border-color: rgb(23, 2, 37);
+}
 .navbar{
     position:fixed;
     top:0;
+    right:0;
     width:100%;
-    color:purple;
+    
+}
 
+.navbar button{
+    align-content: right;
 }
 
 .navbar a {
     float:right;
     text-align:center;
-    
+
   
     
-}
-
-main{
-    margin-top:60px;
-
-}
-h1{
-    text-decoration:line;
-    color:greenyellow;
-    size: 22px;
 }
